[[bin]]
name = "parse"
path = "./parse.rs"

[package]
name = "parse"
version = "0.1.0"
authors = ["docker-container"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = "1.0"